Update script and changed icon

--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
   </div>
   <br>
   <div class="container srv rounded">
-    <div class="fs-3 loading">正在取得你的伺服器...</div>
+    <p class="text-center">Coming soon...</p>
+    <p class="text-center">要控制伺服器中的音樂?<br>請前往<a href="https://app.blackcatbot.tk">這裡</a></p>
+    <!--div class="fs-3 loading">正在取得你的伺服器...</div>
     <img src="./boticon.png" width="65px" height="65px" class="rounded-circle" alt="Black cat">
     <img src="./boticon.png" width="65px" height="65px" class="rounded-circle" alt="Black cat">
     <img src="./boticon.png" width="65px" height="65px" class="rounded-circle" alt="Black cat">
@@ -155,7 +157,7 @@
     <img src="./boticon.png" width="65px" height="65px" class="rounded-circle" alt="Black cat">
     <img src="./boticon.png" width="65px" height="65px" class="rounded-circle" alt="Black cat">
     <img src="./boticon.png" width="65px" height="65px" class="rounded-circle" alt="Black cat">
-    <img src="./boticon.png" width="65px" height="65px" class="rounded-circle" alt="Black cat">
+    <img src="./boticon.png" width="65px" height="65px" class="rounded-circle" alt="Black cat"-->
   </div>
   <script src="./js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
