--- a/music/index.html
+++ b/music/index.html
@@ -36,7 +36,7 @@
   <div class="sticky-top bg-transparent">
     <nav class="navbar navbar-expand-lg navbar-dark bg-info">
       <div class="container-fluid">
-        <a class="navbar-brand" href="https://blackcatbot.tk">
+        <a class="navbar-brand" href="https://app.blackcatbot.tk">
           <img src="../boticon.png" alt="Black cat logo" width="60px" height="60px"
             class="d-inline align-top img-thumbnail" style="border-radius: 50%">
         </a>
