--- a/music/index.html
+++ b/music/index.html
@@ -181,10 +181,10 @@
           <div class="col col-lg-1">
             <button class="btn" id="controlSkip"><i class="bi bi-skip-forward-fill fs-5 text-info"></i></button>
           </div>
-          <div class="col col-lg-1">
+          <div class="col col-lg-1" hidden>
             <button class="btn" id="controlVolume"><i class="bi bi-volume-up-fill fs-5 text-info"></i></button>
           </div>
-          <div class="col col-lg-1">
+          <div class="col col-lg-1" hidden>
             <button class="btn" id="controlAdd"><i class="bi bi-file-earmark-plus-fill fs-5 text-info"></i></button>
           </div>
         </div>
