Update web app design

--- a/music/index.html
+++ b/music/index.html
@@ -156,20 +156,20 @@
         <div class="loader" id="loader"></div>
       </center>
       <a href="#" id="link" class="link">
-        <p class="fs-4" id="songtitle">正在取得歌曲資訊...</p>
+        <p class="fs-4 text-white" id="songtitle">正在取得歌曲資訊...</p>
       </a>
       <center>
-        <input type="text" class="form-control bg-dark text-light rounded-pill" id="serverid" placeholder="12345678"
+        <input type="text" class="form-control bg-dark text-light rounded-pill" id="serverid" placeholder="伺服器ID"
           style="text-align:center;" aria-describedby="serverid">
       </center>
       <br>
       <button type="button" id="query" class="btn btn-outline-light rounded-pill">查詢!</button>
-      <p id="timeT" class="fs-9"></p>
+      <p id="timeT" class="fs-9 text-white"></p>
       <div class="progress bg-dark rounded-pill" id="time">
         <div class="progress-bar bg-info" id="timeP" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
       <br>
-      <div class="container" id="controlPanel">
+      <div class="container bg-white rounded" id="controlPanel">
         <div class="row justify-content-md-center">
           <div class="col col-lg-1">
             <button class="btn" id="lyricsButton"><i class="bi bi-chat-right-text-fill fs-5 text-info"></i></button>
