--- a/music/index.html
+++ b/music/index.html
@@ -165,7 +165,7 @@
       <br>
       <button type="button" id="query" class="btn btn-outline-light rounded-pill">查詢!</button>
       <p id="timeT" class="fs-9 text-white"></p>
-      <div class="progress bg-dark rounded-pill" id="time">
+      <div class="progress bg-white rounded-pill" id="time">
         <div class="progress-bar bg-info" id="timeP" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
       <br>
