--- a/music/index.html
+++ b/music/index.html
@@ -176,22 +176,23 @@
     </div>
   </div>
   <br>
-  <div class="fixed-bottom w-100" id="controlPanel">
+  <div class="fixed-bottom w-100 text-center" id="controlPanel">
     <div class="row justify-content-md-center">
-      <div class="col col-lg-1">
+      <div class="col col-md-2">
         <button class="btn" id="lyricsButton"><i class="bi bi-chat-right-text-fill fs-4 text-info"></i></button>
       </div>
-      <div class="col col-lg-1">
+      <div class="col col-md-2">
         <button class="btn" id="controlPlay"><i class="bi bi-play-fill fs-4 text-info"></i></button>
+        <br>
         <button class="btn" id="controlPause"><i class="bi bi-pause-fill fs-4 text-info"></i></button>
       </div>
-      <div class="col col-lg-1">
+      <div class="col col-md-2">
         <button class="btn" id="controlSkip"><i class="bi bi-skip-forward-fill fs-4 text-info"></i></button>
       </div>
-      <div class="col col-lg-1" hidden>
+      <div class="col col-md-2" hidden>
         <button class="btn" id="controlVolume"><i class="bi bi-volume-up-fill fs-4 text-info"></i></button>
       </div>
-      <div class="col col-lg-1" hidden>
+      <div class="col col-md-2" hidden>
         <button class="btn" id="controlAdd"><i class="bi bi-file-earmark-plus-fill fs-4 text-info"></i></button>
       </div>
     </div>
