--- a/music/index.html
+++ b/music/index.html
@@ -207,7 +207,7 @@
       <div class="col col-md-2">
         <button class="btn" id="controlSkip"><i class="bi bi-skip-forward-fill fs-4 text-info"></i></button>
       </div>
-      <div class="col col-md-2">
+      <div class="col col-md-2" hidden>
         <button class="btn" id="controlVolume"><i class="bi bi-volume-up-fill fs-4 text-info"></i></button>
       </div>
       <div class="col col-md-2" hidden>
