--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       </center>
       <br>
       <button type="button" id="query" class="btn btn-outline-dark rounded-pill">查詢!</button>
-      <p id="timeT" class="fs-9 text-white"></p>
+      <p id="timeT" class="fs-9 text-black"></p>
       <div class="progress bg-white rounded-pill" id="time">
         <div class="progress-bar bg-info" id="timeP" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
