--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/mdb.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap">
   <link rel="stylesheet" href="styles.css">
   <link rel="canonical" href="https://app.blackcatbot.tk/">
@@ -193,11 +194,11 @@
         <p class="fs-4 text-black" id="songtitle">正在取得歌曲資訊...</p>
       </a>
       <center>
-        <input type="text" class="form-control rounded-pill" id="serverid" placeholder="伺服器ID"
+        <input type="text" class="form-control rounded" id="serverid" placeholder="伺服器ID"
           style="text-align:center;" aria-describedby="serverid">
       </center>
       <br>
-      <button type="button" id="query" class="btn btn-outline-dark rounded-pill">查詢!</button>
+      <button type="button" id="query" class="btn btn-primary">查詢!</button>
       <p id="timeT" class="fs-9 text-black"></p>
       <div class="progress bg-white rounded-pill" id="time">
         <div class="progress-bar bg-info" id="timeP" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
@@ -208,33 +209,34 @@
   <div class="fixed-bottom w-100 text-center" id="controlPanel">
     <div class="row justify-content-md-center">
       <div class="col col-md-2">
-        <button class="btn" id="lyricsButton">
-          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" viewBox="0 0 16 16">
+        <button class="btn rounded-circle" id="lyricsButton">
+          <svg xmlns="http://www.w3.org/2000/svg" width="25px" height="25px" fill="white" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M2 12.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z" />
           </svg>
         </button>
       </div>
       <div class="col col-md-2">
-        <button class="btn" id="controlPlay">
-          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" viewBox="0 0 16 16">
+        <button class="btn rounded-circle" id="controlPlay">
+          <svg xmlns="http://www.w3.org/2000/svg" width="25px" height="25px" fill="white" viewBox="0 0 16 16">
             <path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z" />
           </svg>
         </button>
-        <button class="btn" id="controlPause">
-          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" viewBox="0 0 16 16">
+        <button class="btn rounded-circle" id="controlPause">
+          <svg xmlns="http://www.w3.org/2000/svg" width="25px" height="25px" fill="white" viewBox="0 0 16 16">
             <path d="M5.5 3.5A1.5 1.5 0 0 1 7 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5zm5 0A1.5 1.5 0 0 1 12 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5z" />
           </svg>
         </button>
       </div>
       <div class="col col-md-2">
-        <button class="btn" id="controlSkip">
-          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" viewBox="0 0 16 16">
+        <button class="btn rounded-circle" id="controlSkip">
+          <svg xmlns="http://www.w3.org/2000/svg" width="25px" height="25px" fill="white" viewBox="0 0 16 16">
             <path d="M12.5 4a.5.5 0 0 0-1 0v3.248L5.233 3.612C4.693 3.3 4 3.678 4 4.308v7.384c0 .63.692 1.01 1.233.697L11.5 8.753V12a.5.5 0 0 0 1 0V4z"/>
           </svg>
         </button>
       </div>
     </div>
   </div>
+  <script src="js/mdb.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
 </body>
