--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
+
 <head>
   <script async src="https://arc.io/widget.min.js#kJumrvnj"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-178450608-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
+
     function gtag() {
       dataLayer.push(arguments);
     }
@@ -22,27 +24,28 @@
   <meta name="theme-color" content="#0DCAF0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/mdb.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons+Round">
   <link rel="stylesheet" href="styles.css">
   <link rel="canonical" href="https://app.blackcatbot.tk/">
   <link rel="icon" href="favicon.png">
 </head>
+
 <body class="bg-light">
   <div class="sticky-top bg-transparent">
     <nav class="navbar navbar-expand-lg" style="background-color: #5865F2;">
       <div class="container-fluid">
         <a class="navbar-brand" href="https://app.blackcatbot.tk">
-          <img src="boticon.png" alt="Black cat logo" width="60px" height="60px"
-            class="d-inline align-top img-thumbnail" style="border-radius: 50%">
+          <img src="boticon.png" alt="Black cat logo" width="60px" height="60px" class="d-inline align-top img-thumbnail" style="border-radius: 50%">
         </a>
         <div class="d-flex justify-content-end align-items-center rounded-pill float-on-hover" id="user-container">
           <img src="#" width="45px" height="45px" id="user-avatar" class="rounded-circle" alt="User avatar">
           <div id="login-icon">
             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
-              <path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0v-2z"/>
-              <path fill-rule="evenodd" d="M11.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H1.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+              <path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0v-2z" />
+              <path fill-rule="evenodd" d="M11.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H1.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z" />
             </svg>
           </div>
           &nbsp;&nbsp;
@@ -96,8 +99,7 @@
         <div class="modal-body">
           <h1 class="text-center" id="lyricsLoading">正在取得歌詞...</h1>
           <div class="progress rounded-pill" id="lyricsProgress">
-            <div class="progress-bar progress-bar-striped progress-bar-animated rounded-pill" role="progressbar"
-              aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
+            <div class="progress-bar progress-bar-striped progress-bar-animated rounded-pill" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
           </div>
           <p id="lyricsText"></p>
         </div>
@@ -194,8 +196,7 @@
         <p class="fs-4 text-black" id="songtitle">正在取得歌曲資訊...</p>
       </a>
       <center>
-        <input type="text" class="form-control rounded" id="serverid" placeholder="伺服器ID"
-          style="text-align:center;" aria-describedby="serverid">
+        <input type="text" class="form-control rounded" id="serverid" placeholder="伺服器ID" style="text-align:center;" aria-describedby="serverid">
       </center>
       <br>
       <button type="button" id="query" class="btn btn-primary">查詢!</button>
@@ -210,34 +211,35 @@
     <div class="row justify-content-md-center">
       <div class="col col-md-2">
         <button class="btn" id="lyricsButton">
-          <svg xmlns="http://www.w3.org/2000/svg" width="25px" height="25px" fill="white" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="M2 12.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z" />
-          </svg>
+          <span class="material-icons-round text-white">
+            description
+          </span>
         </button>
       </div>
       <div class="col col-md-2">
         <button class="btn" id="controlPlay">
-          <svg xmlns="http://www.w3.org/2000/svg" width="25px" height="25px" fill="white" viewBox="0 0 16 16">
-            <path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z" />
-          </svg>
+          <span class="material-icons-round text-light">
+            play_arrow
+          </span>
         </button>
         <button class="btn" id="controlPause">
-          <svg xmlns="http://www.w3.org/2000/svg" width="25px" height="25px" fill="white" viewBox="0 0 16 16">
-            <path d="M5.5 3.5A1.5 1.5 0 0 1 7 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5zm5 0A1.5 1.5 0 0 1 12 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5z" />
-          </svg>
+          <span class="material-icons-round text-light">
+            pause
+          </span>
         </button>
       </div>
       <div class="col col-md-2">
         <button class="btn" id="controlSkip">
-          <svg xmlns="http://www.w3.org/2000/svg" width="25px" height="25px" fill="white" viewBox="0 0 16 16">
-            <path d="M12.5 4a.5.5 0 0 0-1 0v3.248L5.233 3.612C4.693 3.3 4 3.678 4 4.308v7.384c0 .63.692 1.01 1.233.697L11.5 8.753V12a.5.5 0 0 0 1 0V4z"/>
-          </svg>
+          <span class="material-icons-round text-light">
+            skip_next
+          </span>
         </button>
       </div>
     </div>
   </div>
-  <script src="js/mdb.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
 </body>
+
 </html>
