Update to newer design

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <nav class="navbar navbar-expand-lg" style="background-color: #5865F2;">
       <div class="container-fluid">
         <a class="navbar-brand" href="https://app.blackcatbot.tk">
-          <img src="boticon.png" alt="Black cat logo" width="60px" height="60px" class="d-inline align-top img-thumbnail" style="border-radius: 50%">
+          <img src="favicon.png" alt="Black cat logo" width="60px" height="60px" class="d-inline align-top img-thumbnail" style="border-radius: 50%">
         </a>
         <div class="d-flex justify-content-end align-items-center rounded-pill float-on-hover" id="user-container">
           <img src="#" width="45px" height="45px" id="user-avatar" class="rounded-circle" alt="User avatar">
