--- a/new/index.html
+++ b/new/index.html
@@ -14,7 +14,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdui/1.0.2/css/mdui.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap">
   <link rel="stylesheet" href="styles.css">
   <link rel="canonical" href="https://app.blackcatbot.tk/">
   <link rel="icon" href="../favicon.png">
@@ -53,8 +53,8 @@
       </div>
     </div>
   </div>
-  <div class="overlay mdui-color-text-theme" id="connecting">
-    <div>
+  <div class="overlay mdui-color-text-theme" id="connect">
+    <div id="connectContainer">
       <h1>連線中</h1>
       <div class="mdui-spinner"></div>
     </div>
