--- a/public/new/index.html
+++ b/public/new/index.html
@@ -13,7 +13,9 @@
   <meta name="theme-color" content="#0DCAF0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdui/1.0.2/css/mdui.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.1/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap">
   <link rel="stylesheet" href="styles.css">
   <link rel="canonical" href="https://app.blackcatbot.tk/">
@@ -61,12 +63,28 @@
   </div>
   <div class="overlay mdui-color-text-theme" id="guild">
     <div id="guildContainer">
-      <h1>請輸入伺服器ID, 或直接點擊播放訊息上的連結</h1>
+      <h1 class="mdui-text-center">請輸入伺服器ID, 或直接點擊播放訊息上的連結</h1>
       <div class="mdui-textfield" id="guildForm">
         <label class="mdui-textfield-label">伺服器ID</label>
         <input class="mdui-textfield-input" type="number" id="guildInput"/>
       </div>
       <button class="mdui-btn mdui-color-theme-accent mdui-ripple" id="guildSubmit">查詢播放進度</button>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-1">
+          1
+        </div>
+        <div class="col-1">
+          2
+        </div>
+        <div class="col-1">
+          3
+        </div>
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mdui/1.0.2/js/mdui.min.js"></script>
