--- a/public/new/index.html
+++ b/public/new/index.html
@@ -16,6 +16,7 @@
   <link rel="preconnect" href="https://cdnjs.cloudflare.com">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdui/1.0.2/css/mdui.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons+Round">
   <link rel="stylesheet" href="styles.css">
   <link rel="canonical" href="https://app.blackcatbot.tk/">
   <link rel="icon" href="../favicon.png">
@@ -23,6 +24,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-178450608-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
+
     function gtag() {
       dataLayer.push(arguments);
     }
@@ -31,7 +33,7 @@
   </script>
 </head>
 
-<body class="mdui-theme-primary-blue mdui-theme-accent-indigo mdui-drawer-body-left mdui-appbar-with-toolbar h-100">
+<body class="mdui-theme-primary-blue mdui-theme-accent-indigo mdui-drawer-body-left h-100">
   <header class="mdui-appbar mdui-appbar-fixed">
     <div class="mdui-toolbar mdui-color-blue-600">
       <a class="mdui-btn mdui-btn-icon" mdui-drawer="{target: '#drawer'}"><i class="mdui-icon material-icons">menu</i></a>
@@ -56,34 +58,62 @@
     </div>
   </div>
   <div class="overlay mdui-color-text-theme" id="connect">
-    <div id="connectContainer">
+    <div class="mdui-typo" id="connectContainer">
       <h1>連線中</h1>
       <div class="mdui-spinner"></div>
     </div>
   </div>
   <div class="overlay mdui-color-text-theme" id="guild">
-    <div id="guildContainer">
+    <div class="mdui-typo" id="guildContainer">
       <h1 class="mdui-text-center">請輸入伺服器ID, 或直接點擊播放訊息上的連結</h1>
       <div class="mdui-textfield" id="guildForm">
         <label class="mdui-textfield-label">伺服器ID</label>
-        <input class="mdui-textfield-input" type="number" id="guildInput"/>
+        <input class="mdui-textfield-input" type="number" id="guildInput" />
       </div>
       <button class="mdui-btn mdui-color-theme-accent mdui-ripple" id="guildSubmit">查詢播放進度</button>
     </div>
   </div>
-  <div class="mdui-container">
-    <div class="mdui-row-xs-1 mdui-valign h-75">
-      jejeje
+  <div class="mdui-container vh-100">
+    <div class="mdui-row-xs-1 h-75">
+      <div class="center-everything h-100">
+        <img src="../banner.jpg" width="50%" height="50%">
+      </div>
     </div>
-    <div class="mdui-row-xs-3 mdui-text-center">
-      <div class="mdui-col">
-        1
+    <div class="mdui-row-xs-3 h-25 mdui-text-center">
+      <div class="h-50">
+        <div class="mdui-col">
+          <div class="mdui-float-right">
+            <button class="mdui-btn mdui-btn-icon mdui-ripple mdui-color-theme-accent">
+              <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF">
+                <g>
+                  <path d="M0,0h24v24H0V0z" fill="none" />
+                </g>
+                <g>
+                  <path d="M6,9H3C2.45,9,2,8.55,2,8v0c0-0.55,0.45-1,1-1h3c0.55,0,1,0.45,1,1v0C7,8.55,6.55,9,6,9z M6,12H3c-0.55,0-1,0.45-1,1v0 c0,0.55,0.45,1,1,1h3c0.55,0,1-0.45,1-1v0C7,12.45,6.55,12,6,12z M19.88,18.29l-3.12-3.12c-0.86,0.56-1.89,0.88-3,0.82 c-2.37-0.11-4.4-1.96-4.72-4.31C8.6,8.33,11.49,5.5,14.87,6.07c1.95,0.33,3.57,1.85,4,3.78c0.33,1.46,0.01,2.82-0.7,3.9l3.13,3.13 c0.39,0.39,0.39,1.02,0,1.41l0,0C20.91,18.68,20.27,18.68,19.88,18.29z M17,11c0-1.65-1.35-3-3-3s-3,1.35-3,3s1.35,3,3,3 S17,12.65,17,11z M3,19h8c0.55,0,1-0.45,1-1v0c0-0.55-0.45-1-1-1H3c-0.55,0-1,0.45-1,1v0C2,18.55,2.45,19,3,19z" />
+                </g>
+              </svg>
+            </button>
+          </div>
+        </div>
+        <div class="mdui-col">
+          <button class="mdui-btn mdui-btn-icon mdui-ripple mdui-color-theme-accent">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF">
+              <path d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z" /></svg>
+          </button>
+        </div>
+        <div class="mdui-col">
+          <div class="mdui-float-left">
+            <button class="mdui-btn mdui-btn-icon mdui-ripple mdui-color-theme-accent">
+              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF">
+                <path d="M7.58 16.89l5.77-4.07c.56-.4.56-1.24 0-1.63L7.58 7.11C6.91 6.65 6 7.12 6 7.93v8.14c0 .81.91 1.28 1.58.82zM16 7v10c0 .55.45 1 1 1s1-.45 1-1V7c0-.55-.45-1-1-1s-1 .45-1 1z" /></svg>
+            </button>
+          </div>
+        </div>
       </div>
-      <div class="mdui-col">
-        2
-      </div>
-      <div class="mdui-col">
-        3
+      <div class="mdui-row mdui-p-a-1 h-50">
+        <div class="mdui-progress">
+          <div class="mdui-progress-indeterminate"></div>
+        </div>
       </div>
     </div>
   </div>
