--- a/public/new/index.html
+++ b/public/new/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdui/1.0.2/css/mdui.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons+Round">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./styles.css">
   <link rel="canonical" href="https://app.blackcatbot.tk/">
   <link rel="icon" href="../favicon.png">
   <script async src="https://arc.io/widget.min.js#kJumrvnj"></script>
