--- a/public/new/index.html
+++ b/public/new/index.html
@@ -40,7 +40,7 @@
       <a href="https://app.blackcatbot.tk/new" class="mdui-typo-headline">Black cat music</a>
     </div>
   </header>
-  <div class="mdui-drawer" id="drawer">
+  <div class="mdui-drawer mdui-appbar-with-toolbar" id="drawer">
     <div class="mdui-list">
       <a class="mdui-list-item mdui-ripple" href="https://blackcatbot.tk" target="_blank">
         <i class="mdui-list-item-icon mdui-icon material-icons">&#xe88a;</i>
@@ -76,14 +76,26 @@
   <div class="mdui-container vh-100">
     <div class="mdui-row-xs-1 h-75">
       <div class="center-everything h-100">
-        <img src="../banner.jpg" width="50%" height="50%">
+        <div class="mdui-text-center mdui-valign mdui-typo">
+          <div class="mdui-col-xs-6">
+            <img src="../unknown.png" alt="影片縮圖" class="mdui-img-fluid">
+          </div>
+          <div class="mdui-col-xs-6">
+            <div class="mdui-row">
+              <h1>Test</h1>
+            </div>
+            <div class="mdui-row">
+              <h2>Testdv</h2>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="mdui-row-xs-3 h-25 mdui-text-center">
       <div class="h-50">
         <div class="mdui-col">
           <div class="mdui-float-right">
-            <button class="mdui-btn mdui-btn-icon mdui-ripple mdui-color-theme-accent">
+            <button class="mdui-btn mdui-btn-icon mdui-ripple mdui-color-theme-accent" mdui-tooltip="{content: '即將推出', position: 'top'}" id="actionLyrics">
               <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF">
                 <g>
                   <path d="M0,0h24v24H0V0z" fill="none" />
@@ -96,24 +108,25 @@
           </div>
         </div>
         <div class="mdui-col">
-          <button class="mdui-btn mdui-btn-icon mdui-ripple mdui-color-theme-accent">
+          <button class="mdui-btn mdui-btn-icon mdui-ripple mdui-color-theme-accent" mdui-tooltip="{content: '即將推出', position: 'top'}" id="actionPlay">
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF">
               <path d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z" /></svg>
           </button>
         </div>
         <div class="mdui-col">
           <div class="mdui-float-left">
-            <button class="mdui-btn mdui-btn-icon mdui-ripple mdui-color-theme-accent">
+            <button class="mdui-btn mdui-btn-icon mdui-ripple mdui-color-theme-accent" mdui-tooltip="{content: '即將推出', position: 'top'}" id="actionSkip">
               <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF">
                 <path d="M7.58 16.89l5.77-4.07c.56-.4.56-1.24 0-1.63L7.58 7.11C6.91 6.65 6 7.12 6 7.93v8.14c0 .81.91 1.28 1.58.82zM16 7v10c0 .55.45 1 1 1s1-.45 1-1V7c0-.55-.45-1-1-1s-1 .45-1 1z" /></svg>
             </button>
           </div>
         </div>
       </div>
-      <div class="mdui-row mdui-p-a-1 h-50">
+      <div class="mdui-row mdui-p-a-1 h-50 mdui-text-center mdui-typo">
         <div class="mdui-progress">
-          <div class="mdui-progress-indeterminate"></div>
+          <div class="mdui-progress-indeterminate" id="songProgress"></div>
         </div>
+        <h6>--:--</h6>
       </div>
     </div>
   </div>
