--- a/public/new/index.html
+++ b/public/new/index.html
@@ -77,15 +77,17 @@
     <div class="mdui-row-xs-1 h-75">
       <div class="center-everything h-100">
         <div class="mdui-text-center mdui-valign mdui-typo">
-          <div class="mdui-col-xs-6">
-            <img src="../unknown.png" alt="影片縮圖" class="mdui-img-fluid">
-          </div>
-          <div class="mdui-col-xs-6">
-            <div class="mdui-row">
-              <h1>Test</h1>
+          <div class="mdui-row">
+            <div class="mdui-col-xs-12 mdui-col-md-6">
+              <img src="../unknown.png" alt="影片縮圖" class="mdui-img-fluid" id="songImage">
             </div>
-            <div class="mdui-row">
-              <h2>Testdv</h2>
+            <div class="mdui-col-xs-12 mduu-col-md-6">
+              <div class="mdui-row">
+                <h1 id="songTitle">eheh</h1>
+              </div>
+              <div class="mdui-row">
+                <h2 id="songServer">bruh</h2>
+              </div>
             </div>
           </div>
         </div>
@@ -126,7 +128,7 @@
         <div class="mdui-progress">
           <div class="mdui-progress-indeterminate" id="songProgress"></div>
         </div>
-        <h6>--:--</h6>
+        <h6 id="songTime">--:--</h6>
       </div>
     </div>
   </div>
