--- a/public/new/index.html
+++ b/public/new/index.html
@@ -77,16 +77,16 @@
     <div class="mdui-row-xs-1 h-75">
       <div class="center-everything h-100">
         <div class="mdui-text-center mdui-valign mdui-typo">
-          <div class="mdui-row">
+          <div class="mdui-row mdui-p-a-1">
             <div class="mdui-col-xs-12 mdui-col-md-6">
               <img src="../unknown.png" alt="影片縮圖" class="mdui-img-fluid" id="songImage">
             </div>
-            <div class="mdui-col-xs-12 mduu-col-md-6">
+            <div class="mdui-col-xs-12 mdui-col-md-6">
               <div class="mdui-row">
-                <h1 id="songTitle">eheh</h1>
+                <h1 id="songTitle"></h1>
               </div>
               <div class="mdui-row">
-                <h2 id="songServer">bruh</h2>
+                <h2 id="songServer"></h2>
               </div>
             </div>
           </div>
