--- a/public/new/index.html
+++ b/public/new/index.html
@@ -88,6 +88,12 @@
               <div class="mdui-row">
                 <h2 id="songServer"></h2>
               </div>
+              <div class="mdui-row">
+                <a class="mdui-btn mdui-color-theme-accent mdui-ripple" href="https://blackcatbot.tk/blackcat" target="_blank">
+                  <i class="mdui-icon mdui-icon-left material-icons">&#xe7fe;</i>
+                  邀請黑貓
+                </a>
+              </div>
             </div>
           </div>
         </div>
