--- a/public/new/index.html
+++ b/public/new/index.html
@@ -36,7 +36,8 @@
 <body class="mdui-theme-primary-blue mdui-theme-accent-indigo mdui-drawer-body-left h-100">
   <header class="mdui-appbar mdui-appbar-fixed">
     <div class="mdui-toolbar mdui-color-blue-600">
-      <a class="mdui-btn mdui-btn-icon" mdui-drawer="{target: '#drawer'}"><i class="mdui-icon material-icons">menu</i></a>
+      <a class="mdui-btn mdui-btn-icon" mdui-drawer="{target: '#drawer'}"><i
+          class="mdui-icon material-icons">menu</i></a>
       <a href="https://app.blackcatbot.tk/new" class="mdui-typo-headline">Black cat music</a>
     </div>
   </header>
@@ -50,16 +51,27 @@
         <i class="mdui-list-item-icon mdui-icon material-icons">&#xe3b7;</i>
         <div class="mdui-list-item-content">變更主題</div>
       </div>
-      <div class="mdui-divider"></div>
       <div class="mdui-list-item mdui-ripple" id="drawerQuery" mdui-drawer-close>
         <i class="mdui-list-item-icon mdui-icon material-icons">&#xe8b6;</i>
         <div class="mdui-list-item-content">查詢其他伺服器</div>
       </div>
+      <div class="mdui-divider"></div>
+      <div class="mdui-list-item mdui-ripple" id="drawerLogin" mdui-drawer-close>
+          <i class="mdui-list-item-icon mdui-icon material-icons">&#xe85e;</i>
+        <div class="mdui-list-item-content" id="drawerLoginText"></div>
+      </div>
+      <div class="mdui-divider"></div>
     </div>
   </div>
   <div class="overlay mdui-color-text-theme" id="connect">
     <div class="mdui-typo" id="connectContainer">
       <h1>連線中</h1>
+      <div class="mdui-spinner"></div>
+    </div>
+  </div>
+  <div class="overlay mdui-color-text-theme" id="login">
+    <div class="mdui-typo" id="loginContainer">
+      <h1>正在等待登入...</h1>
       <div class="mdui-spinner"></div>
     </div>
   </div>
@@ -79,7 +91,7 @@
         <div class="mdui-text-center mdui-valign mdui-typo">
           <div class="mdui-row mdui-p-a-1">
             <div class="mdui-col-xs-12 mdui-col-md-6">
-              <img src="../unknown.png" alt="影片縮圖" class="mdui-img-fluid" id="songImage">
+              <img src="../unknown.png" alt="影片縮圖" class="mdui-img-fluid mdui-img-rounded" id="songImage">
             </div>
             <div class="mdui-col-xs-12 mdui-col-md-6">
               <div class="mdui-row">
@@ -87,12 +99,6 @@
               </div>
               <div class="mdui-row">
                 <h2 id="songServer"></h2>
-              </div>
-              <div class="mdui-row">
-                <a class="mdui-btn mdui-color-theme-accent mdui-ripple" href="https://blackcatbot.tk/blackcat" target="_blank">
-                  <i class="mdui-icon mdui-icon-left material-icons">&#xe7fe;</i>
-                  邀請黑貓
-                </a>
               </div>
             </div>
           </div>
@@ -103,29 +109,38 @@
       <div class="h-50">
         <div class="mdui-col">
           <div class="mdui-float-right">
-            <button class="mdui-btn mdui-btn-icon mdui-ripple mdui-color-theme-accent" mdui-tooltip="{content: '即將推出', position: 'top'}" id="actionLyrics">
-              <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF">
+            <button class="mdui-btn mdui-btn-icon mdui-ripple mdui-color-theme-accent"
+              mdui-tooltip="{content: '即將推出', position: 'top'}" id="actionLyrics">
+              <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px"
+                viewBox="0 0 24 24" width="24px" fill="#FFFFFF">
                 <g>
                   <path d="M0,0h24v24H0V0z" fill="none" />
                 </g>
                 <g>
-                  <path d="M6,9H3C2.45,9,2,8.55,2,8v0c0-0.55,0.45-1,1-1h3c0.55,0,1,0.45,1,1v0C7,8.55,6.55,9,6,9z M6,12H3c-0.55,0-1,0.45-1,1v0 c0,0.55,0.45,1,1,1h3c0.55,0,1-0.45,1-1v0C7,12.45,6.55,12,6,12z M19.88,18.29l-3.12-3.12c-0.86,0.56-1.89,0.88-3,0.82 c-2.37-0.11-4.4-1.96-4.72-4.31C8.6,8.33,11.49,5.5,14.87,6.07c1.95,0.33,3.57,1.85,4,3.78c0.33,1.46,0.01,2.82-0.7,3.9l3.13,3.13 c0.39,0.39,0.39,1.02,0,1.41l0,0C20.91,18.68,20.27,18.68,19.88,18.29z M17,11c0-1.65-1.35-3-3-3s-3,1.35-3,3s1.35,3,3,3 S17,12.65,17,11z M3,19h8c0.55,0,1-0.45,1-1v0c0-0.55-0.45-1-1-1H3c-0.55,0-1,0.45-1,1v0C2,18.55,2.45,19,3,19z" />
+                  <path
+                    d="M6,9H3C2.45,9,2,8.55,2,8v0c0-0.55,0.45-1,1-1h3c0.55,0,1,0.45,1,1v0C7,8.55,6.55,9,6,9z M6,12H3c-0.55,0-1,0.45-1,1v0 c0,0.55,0.45,1,1,1h3c0.55,0,1-0.45,1-1v0C7,12.45,6.55,12,6,12z M19.88,18.29l-3.12-3.12c-0.86,0.56-1.89,0.88-3,0.82 c-2.37-0.11-4.4-1.96-4.72-4.31C8.6,8.33,11.49,5.5,14.87,6.07c1.95,0.33,3.57,1.85,4,3.78c0.33,1.46,0.01,2.82-0.7,3.9l3.13,3.13 c0.39,0.39,0.39,1.02,0,1.41l0,0C20.91,18.68,20.27,18.68,19.88,18.29z M17,11c0-1.65-1.35-3-3-3s-3,1.35-3,3s1.35,3,3,3 S17,12.65,17,11z M3,19h8c0.55,0,1-0.45,1-1v0c0-0.55-0.45-1-1-1H3c-0.55,0-1,0.45-1,1v0C2,18.55,2.45,19,3,19z" />
                 </g>
               </svg>
             </button>
           </div>
         </div>
         <div class="mdui-col">
-          <button class="mdui-btn mdui-btn-icon mdui-ripple mdui-color-theme-accent" mdui-tooltip="{content: '即將推出', position: 'top'}" id="actionPlay">
+          <button class="mdui-btn mdui-btn-icon mdui-ripple mdui-color-theme-accent"
+            mdui-tooltip="{content: '即將推出', position: 'top'}" id="actionPlay">
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF">
-              <path d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z" /></svg>
+              <path
+                d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z" />
+            </svg>
           </button>
         </div>
         <div class="mdui-col">
           <div class="mdui-float-left">
-            <button class="mdui-btn mdui-btn-icon mdui-ripple mdui-color-theme-accent" mdui-tooltip="{content: '即將推出', position: 'top'}" id="actionSkip">
+            <button class="mdui-btn mdui-btn-icon mdui-ripple mdui-color-theme-accent"
+              mdui-tooltip="{content: '即將推出', position: 'top'}" id="actionSkip">
               <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF">
-                <path d="M7.58 16.89l5.77-4.07c.56-.4.56-1.24 0-1.63L7.58 7.11C6.91 6.65 6 7.12 6 7.93v8.14c0 .81.91 1.28 1.58.82zM16 7v10c0 .55.45 1 1 1s1-.45 1-1V7c0-.55-.45-1-1-1s-1 .45-1 1z" /></svg>
+                <path
+                  d="M7.58 16.89l5.77-4.07c.56-.4.56-1.24 0-1.63L7.58 7.11C6.91 6.65 6 7.12 6 7.93v8.14c0 .81.91 1.28 1.58.82zM16 7v10c0 .55.45 1 1 1s1-.45 1-1V7c0-.55-.45-1-1-1s-1 .45-1 1z" />
+              </svg>
             </button>
           </div>
         </div>
